# rustclock

./: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
src/: binaryclock.rs  lib.rs  main.rs
