[package]
name = "binaryclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = "0.4.24"
wasm-bindgen = "0.2.69"
web-sys = "0.3.50"

[lib]
path = "src/binaryclock.rs"
crate-type = ["cdylib"]